--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
 
 script:
     - scons
-    - sudo scons prefix=/app install
-    - bash -ex appimage/appimage.sh
     - nosetests --with-doctest lib
     - tests/run_all_basic_tests.sh
+    - sudo scons prefix=/app install
+    - bash -ex appimage/appimage.sh || true
