Discovery: see what we have to play with

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ build:
   pull: true
   shell: mingw$$arch
   commands:
+    - env
     - windows/msys2-build.sh installdeps
     - windows/msys2-build.sh build
     - windows/msys2-build.sh test
