--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,7 @@ build:
   shell: mingw$$arch
   commands:
     - env
+    - git config --get remote.origin.url
     - windows/msys2-build.sh installdeps
     - windows/msys2-build.sh build
     - windows/msys2-build.sh test
