--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
 
 before_script:
     - env
+    - git config --get remote.origin.url
     - git clone https://github.com/mypaint/libmypaint
     - cd libmypaint
     - ./autogen.sh
